# esp32_s3_subModules

./: .gitignore  README.md
hello_world/: build_flash_monitor
local_webPage/: folder_details.md
local_webPage/network/: index.html  plan.md
subModules_Dev/: CMakeLists.txt  build_flash_monitor  partitions.csv  sdkconfig
subModules_Dev/main/: CMakeLists.txt  idf_component.yml  main.c  main1.c  main_wifiWorks.c
subModules_Dev/subModules/audio/: CMakeLists.txt  audio_packet.h
subModules_Dev/subModules/button/: CMakeLists.txt  button.c  button.h
subModules_Dev/subModules/console/: CMakeLists.txt  console_manager.c  console_manager.h  console_manager_PartialOK.c
subModules_Dev/subModules/webPortal/: CMakeLists.txt  routes.c  routes.h  webportal.c  webportal.h
subModules_Dev/subModules/webPortal/handlers/: audio_handler.c  audio_handler.h  home_handler.c  home_handler.h  network_handler.c  network_handler.h  service_handler.c  service_handler.h  services_handler.c  services_handler.h  system_handler.c  system_handler.h  wifi_handler.c  wifi_handler.h
subModules_Dev/subModules/webPortal/html/: audio_html.c  audio_html.h  common_css.c  common_css.h  common_nav.c  common_nav.h  home_html.c  home_html.h  network_html.c  network_html.h  services_html.c  services_html.h  system_html.c  system_html.h
webSocket_server/: README  client.py  cludflare_setup.txt  server.py  webSocket_client.py  webSocket_server.py  webSocket_sever_audio.py  webSocket_sever_audio02.py  webSocket_sever_audio03.py
webSocket_server/ws_Project/: README.md  main.py  requirements.txt
(+34 files in other folders)
